# mader

./: README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/actions/docker/: Dockerfile  compose.yaml  entrypoint.sh
.github/workflows/: ci.yml  test-docker.yml
mader/: app.py  schemas.py
madr/: app.py  models.py  schemas.py  security.py  utils.py
madr/routers/: contas.py  livros.py  romancistas.py
migrations/: env.py
migrations/versions/: 2c5b1b8c27bd_create_romancistas_table.py  7df0c6ac6af7_create_users_table.py  9b06d09c2549_create_livros_table.py
tests/: conftest.py  test_app.py  test_contas.py  test_livros.py  test_romancistas.py  test_security.py  test_token.py  test_utils.py
